maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:23: error: not found: value cherEcrit
		cherEcrit(f,g-1)
                ^JediEscaper:27: error: recursive method chercheEcrit needs result type
		chercheEcrit(f-1,g)
                ^